# forest

./: .gitignore  Pipfile  bouncer.py  chatbot.py  deploy.sh  jerkybot.py  lotte.py  merchantbot.py  mud.py  padatious-results.ipynb  parse_address.py  parsingbot.py  phonelookup.py  pyproject.toml  repostbot.py  setup.sh  shoppingcart.md  tree  upstash.py  wizard.py
classifiedsbot/: Dockerfile  Pipfile  fly.toml  gamesbot.py  multiusertest.py  repostbot.py
classifiedsbot/games/: card.py  imagetest.py
contact/: Dockerfile  contactbot.py  forest_tables.py
fallback/: Dockerfile  fallback.py  fly.toml  phrases.txt  pyproject.toml  requirements.txt
forest/: core.py  datastore.py  message.py  payments_monitor.py  pdictng.py  pghelp.py  semantic_dist.py  utils.py
fs_benchmark/: Dockerfile  Pipfile  fs_tester.py  full_service.py  payments_monitor.py  test_submits.py  utils.py
hotline/: Pipfile  clangat.py
imogen/: Dockerfile  classic-fly.toml  dev-fly.toml  imogen.py  ren-fly.toml
imposter/: imposter.py  pyproject.toml
jerkybot-data/: address.entity  affirm.intent  botchallenge.intent  choose_address.intent  choose_flavor.intent  choose_quantity.intent  choose_size.intent  deny.intent  flavor.entity  goodbye.intent  order.intent  size.entity  stop.intent
kube/: forest-bot-configmap.yaml  forest-bot-secrets.yaml
lotte/: Dockerfile  lotte.py  pyproject.toml
mc_util/: README.md  RunDecode.py  __init__.py  external_pb2.py  external_pb2.pyi  printable_pb2.py  printable_pb2.pyi
nlu/: greet.intent
other_bots/: faeriebot.py
sample_bots/: termbot.py
semantic_search/: Dockerfile  fly.toml  pyproject.toml  requirements.txt  server.py
ted/: redeem.py
teddy/: teddy.py
termbot/: termbot.py
termboy/: Dockerfile  README.md  termboy.py
tests/: test_questions_bot.py  test_unit.py
vlada/: charity.py  pyproject.toml
