[tool.poetry]
name = "fallback"
version = "0.1.0"
description = "semantic search for fallback phrases"
authors = ["deepfates <deepfates@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
forestbot = {git = "https://github.com/mobilecoinofficial/forest", rev="main"}
pycryptodome = "^3.14.1"
acrossword = {git = "https://github.com/deepfates/acrossword", rev = "flyctl"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
