[tool.poetry]
name = "imposter"
version = "0.1.0"
description = ""
authors = ["deepfates <deepfates@gmail.com>"]

[tool.poetry.dependencies]
h11 = "^0.13.0"
personate = {git = "https://github.com/deepfates/personate", rev="nodiscord"}
acrossword = {git = "https://github.com/deepfates/acrossword", }
forestbot = {git = "https://github.com/mobilecoinofficial/forest", rev = "syl/turboposter"}


[tool.poetry.dev-dependencies]
ipython = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
